Fixed some overflow css issue in Safari

--- a/content/css/main.css
+++ b/content/css/main.css
@@ -557,7 +557,9 @@ img.inside
   vertical-align: middle
 
 pre
-  overflow: auto
+  overflow
+    y: hidden
+    x: auto
 
 .withfile pre
   margin-top: 0
